jwt authentication and databse integration

--- a/api-server/package.json
+++ b/api-server/package.json
@@ -7,15 +7,24 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.956.0",
+    "@prisma/client": "^6.19.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.16.3",
+    "prisma": "^6.19.1",
     "random-word-slugs": "^0.1.7",
     "socket.io": "^4.8.1",
     "winston": "^3.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
