--- a/build-server/package.json
+++ b/build-server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.3",
     "fs": "^0.0.1-security",
     "ioredis": "^5.8.2",
+    "kafkajs": "^2.2.4",
     "mime-types": "^2.1.35",
     "winston": "^3.19.0"
   }
