--- a/api-server/package.json
+++ b/api-server/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
+    "kafkajs": "^2.2.4",
     "pg": "^8.16.3",
     "prisma": "^6.19.1",
     "random-word-slugs": "^0.1.7",
