--- a/log-server/package.json
+++ b/log-server/package.json
@@ -18,8 +18,10 @@
     "clickhouse": "^2.6.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "kafkajs": "^2.2.4",
     "socket.io": "^4.8.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "winston": "^3.19.0"
   }
 }
